# frontend/openapi.json
@@ -90,9 +90,7 @@
         }
       },
       "required": [
-        "current_email",
-        "first_name",
-        "last_name"
+        "current_email"
       ],
       "type": "object"
     }
